# scalar-doc.rs

./: Cargo.toml  README.md
examples/actix/: Cargo.toml
examples/actix/src/: main.rs
examples/axum/: Cargo.toml
examples/axum/src/: main.rs  openapi.json
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
scalar-doc/: Cargo.toml
scalar-doc/src/: configuration.rs  lib.rs
scalar-doc/src/scalar_actix/: mod.rs
scalar-doc/src/templates/: template.html
