[package]
license = "Apache-2.0"
name = "scalar-doc"
version = "0.1.0"
edition = "2021"
description = "An HTTP API documentation generator for Rust that doesn't care about which HTTP framework you use."
repository = "https://github.com/Courtcircuits/scalar-doc.rs"
homepage = "https://github.com/Courtcircuits/scalar-doc.rs"
readme = { file = "README.md", workspace = true }
keywords = ["http", "api", "documentation", "openapi", "swagger"]
categories = ["web-programming", "development-tools"]

[dependencies]
anyhow = "1.0.86"
tera = "1.20.0"
actix-web = { version = "4.9.0", optional = true }
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }

[features]
default = []
actix = ["dep:actix-web"]
